# qrwatermark

./: Cargo.toml  README.md
examples/: background_image.rs  custom.rs  custom_dots.rs  default.rs  example.rs  without_logo.rs
src/: lib.rs
src/configs/: image_config.rs  logo_config.rs  mod.rs
src/traits/: builder.rs  mod.rs  rgb.rs
