[package]
name = "qrwatermark"
version = "1.0.1"
edition = "2021"
authors = ["hlsxx <holespato@email.com>"]
license = "MIT"
description = "A tool to generate QR codes with watermarks"
readme = "README.md"
homepage = "https://github.com/hlsxx/qrwatermark"
repository = "https://github.com/hlsxx/qrwatermark"
keywords = ["qr-code", "watermark"]

[dependencies]
image = "0.25.2"
imageproc = "0.25.0"
qrcodegen = "1.8.0"
rand = "0.8.5"
rusttype = "0.9.3"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true
panic = "abort"
